--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,16 @@
   <input type="text" name="inputQuantity" mask-quantity [(ngModel)]="inputQuantity" #myInput="ngModel" required>
   <input 
     type="text" 
-    name="inputQuantity2" 
-    [value]="inputQuantity2Number | number:'1.0-0'"
+    name="inputQuantity2"
+    #myInput2="ngModel"
+    [ngModel]="inputQuantity2Number | number:'1.0-0'"
     (keyup)="changeInput2($event)"
+    pattern="^[\d+(\.\d+)*]{1,19}$"
     required
   >
   <!-- [ngModel]="inputQuantity2 | number:'4.0-0'"  -->
 
-  <p [hidden]="myInput.valid || myInput.pristine">El formulario no es válido</p>
+  <p [hidden]="myInput2.valid || myInput2.pristine">El formulario no es válido</p>
   <button type="submit" [disabled]="!myForm.form.valid">Comprobar</button>
 </form>
 <div>
