FEAT: bootstrap grid

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
 
 <h1>Angular Router App</h1>
 <!-- This nav gives you links to click, which tells the router which route to use (defined in the routes constant in  AppRoutingModule) -->
-<nav>
+<nav class="p-3">
   <ul>
     <li><a routerLink="/mask-test" routerLinkActive="active" ariaCurrentWhenActive="page">Mask Test</a></li>
     <li><a routerLink="/material" routerLinkActive="active" ariaCurrentWhenActive="page">Material</a></li>
