FEAT: material typography

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,7 @@
 <p [appHighlight]="color">Highlight me!</p>
 
 <h1>Angular Router App</h1>
+<h1 class="title">Angular Router App</h1>
 <!-- This nav gives you links to click, which tells the router which route to use (defined in the routes constant in  AppRoutingModule) -->
 <nav class="p-3">
   <ul>
