FEAT: chatgpt solution

--- a/src/app/pages/mask-test/mask-test.component.html
+++ b/src/app/pages/mask-test/mask-test.component.html
@@ -20,7 +20,7 @@
         mask-quantity
         [(ngModel)]="inputQuantity"
         #myInput="ngModel"
-        pattern="^[\d+(\.\d+)*]{1,19}$"
+        maxlength="19"
         required
       >
       <input 
