--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,7 @@
   <ul>
     <li><a routerLink="/mask-test" routerLinkActive="active" ariaCurrentWhenActive="page">Mask Test</a></li>
     <li><a routerLink="/material" routerLinkActive="active" ariaCurrentWhenActive="page">Material</a></li>
+    <li><a routerLink="/form-array" routerLinkActive="active" ariaCurrentWhenActive="page">Form Array</a></li>
   </ul>
 </nav>
 <!-- The routed views render in the <router-outlet>-->
